shared/components/BaseButton/BaseButton.modules.scss
@import '../../../src/scss/settings/colours';
@import '../../../src/scss/utility/sass-mq';

$primary-bg-color: $color-primary;
$secondary-bg-color: $color-secondary;
$button-text-color: $color-white;

@mixin border {
  // Don't add a border because it changes the size of the button.
  // Box-shadow gives a "free" border using the text color.
  box-shadow: 0 0 0 1px;
}

.base {
  composes: none rounded from '../../../src/components/Borders.modules.scss';
  composes: medium boldFont from '../../../src/components/Typography/Text/Text.modules.scss';
  composes: height font from '../../../src/components/Forms.modules.scss';

  margin: 0;
  padding: 0 2rem;

  cursor: pointer;

  background: none;
  transition: background 0.2s;
}

.sizing {
  composes: base;

  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;

  @include mq($from: md) {
    display: inline-flex;

    width: auto;
    min-width: 180px;
  }
}

.inline + .inline {
  // Using < 20px to compensate for the extra margin which appears between inline-block
  // elements due to whitespace in the actual markup.
  margin-left: 1rem;
}

.primary {
  background-color: $primary-bg-color;
  color: $button-text-color;

  &:hover {
    @include border;

    background-color: $button-text-color;
    color: $primary-bg-color;
  }
}

.secondary {
  background-color: $secondary-bg-color;
  color: $button-text-color;

  &:hover {
    @include border;

    background-color: $button-text-color;
    color: $secondary-bg-color;
  }
}

.inverted {
  background-color: $button-text-color;
  color: $color-text;

  &:hover {
    @include border;

    background-color: transparent;
    color: $button-text-color;
  }
}

.centered {
  composes: rounded from '../../../src/components/Borders.modules.scss';

  width: 100%;
  height: 100%;

  align-items: center;
  justify-content: center;
}

